# BioGAP

./: .gitmodules  README.md
Firmware/: .gitignore  README.md
Firmware/src_NRF/: CMakeLists.txt  CMakePresets.json  Kconfig  ads_appl.c  ads_appl.h  ads_spi.c  ads_spi.h  ble_appl.c  ble_appl.h  bluetooth.c  board_streaming.c  board_streaming.h  common.h  i2c_helpers.c  i2c_helpers.h  lis2duxs12_sensor.c  lis2duxs12_sensor.h  main.c  pm_static.yml  ppg_appl.c  ppg_appl.h  prj.conf
Firmware/src_NRF/bsp/: pwr_bsp.c  pwr_bsp.h
Firmware/src_NRF/child_image/: b0n.conf  hci_ipc.conf  mcuboot.conf  rpc_host.conf
